# AL1S

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  config.toml.example  docker-compose.yml  env.example  main.py  pyproject.toml
data/: init_db.sql
src/: __init__.py  bot.py  config.py  models.py
src/agents/: __init__.py  langchain_agent_service.py  unified_agent_service.py
src/agents/unified_agent/: __init__.py  enhanced_unified_agent.py  task_builder.py  task_orchestrator.py  unified_agent_service.py
src/config/: roles.yaml
src/handlers/: __init__.py  base_handler.py  chat_handler.py  command_handler.py  image_handler.py
src/infra/: __init__.py  database.py  mcp.py  vector.py
src/services/: ascii2d_service.py  conversation_service.py  database_service.py  knowledge_extractor.py  learning_service.py  mcp_service.py  openai_service.py  rag_service.py
src/utils/: database_logger.py
