[project]
name = "al1s-bot"
version = "0.1.0"
description = "一个功能完整的Telegram聊天机器人，支持OpenAI聊天、角色定制和图片搜索"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=22.3",
  "aiohttp>=3.8.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "loguru>=0.7.0",
  "beautifulsoup4>=4.12.0",
  "pillow>=11.3.0",
  "requests>=2.31.0",
  "PicImageSearch>=3.12.9",
  "pyyaml>=6.0.2",
  "openai>=1.105.0",
  "mcp[cli]>=1.0.0",
  "faiss-cpu>=1.7.4",
  "numpy>=2.0.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=5.1.0",
  "torch>=2.0.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "flake8>=7.3.0",
]
